# Nightfall

./: Nightfall.ipynb  README.md  pyproject.toml
core/: __init__.py  coreset.py  feature_extractor.py  memory_bank.py  patchcore.py  preprocessing.py
eval/: __init__.py  colab_setup.py  dataloader.py  harness.py  metrics.py  pyproject.toml  run_eval.py  run_eval_int8.py  train.py
scripts/: benchmark_latency.py  calibrate_thresholds.py  generate_test_image_header.py  train.py
serving/: nightfall_pb2.py  nightfall_pb2_grpc.py  rest_gateway.py  run_grpc_server.py
serving/esp32_client/: esp32_client.ino
serving/proto/: nightfall.proto
