[project]
name = "nightfall"
version = "0.1.0"
description = "Production-grade anomaly detection: hand-rolled PatchCore with multi-category support, quantized edge deployment, and gRPC serving."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "scikit-image>=0.22",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=23.0", "ruff>=0.1"]
serving = ["grpcio>=1.60", "grpcio-tools>=1.60", "fastapi>=0.109", "uvicorn>=0.27"]
quantize = ["onnx>=1.15", "onnxruntime>=1.16"]
observability = ["prometheus-client>=0.19"]
# anomalib is used ONLY as a data-fetching utility (its MVTecAD datamodule
# handles the download + folder layout) -- NOT as the modeling library.
# The actual PatchCore algorithm is hand-rolled in nightfall.core.
# `datasets` backs the HuggingFace mirror fallback used when anomalib's
# download fails (a known intermittent issue as of early 2026).
data = ["anomalib>=1.0", "datasets>=2.16"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "eval*", "quantize*", "serving*", "observability*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
